Nahrazení placeholderů skutečnou grafikou (vlastnoruční v PS)

--- a/index.html
+++ b/index.html
@@ -21,6 +21,25 @@
 		}
 		#aside {
 			float: right;
+			position: fixed;
+			text-align: right;
+  			bottom: 0;
+  			right: 3%;
+			left: 0;
+			top: 25%;
+			font-family: "Lucida Console";
+		}
+		#aside2 {
+			float: right;
+			color: grey;
+			position: fixed;
+			text-align: right;
+  			bottom: 3%;
+  			right: 3%;
+			left: 0;
+			top: 0;
+			font-family: "Lucida Console";
+
 		}
 		img {
 			width: 100%;
@@ -30,6 +49,10 @@
 	</style>
 </head>
 <body id="body">
+	<div id="aside2">
+	<h2>Game made by Froggytron</h2>
+	<h3>move with arrows - try to escape</h3>
+	</div>
 	<div id="aside">
 	</div>
 	<div id="game">
